samples/_failures_safe/1761073774_476026_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5baff798.c: In function ‘main’:
./samples/SAFE/__tmp_5baff798.c:144:12: error: missing terminating " character
  144 |     printf("Compressed data (%zu bytes):\
      |            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_5baff798.c:144:5: error: expected expression at end of input
  144 |     printf("Compressed data (%zu bytes):\
      |     ^~~~~~
./samples/SAFE/__tmp_5baff798.c:144:5: error: expected declaration or statement at end of input
